--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" href="https://www.netclipart.com/pp/m/7-73829_download-smiley-face-png-white.png"/>
+    <link
+      rel="icon"
+      href="https://www.netclipart.com/pp/m/7-73829_download-smiley-face-png-white.png"
+    />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
